deploy.yaml
# Copyright 2020 Google Inc. All rights reserved.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

apiVersion: v1
kind: Service
metadata:
  name: web-std
  annotations:
    cloud.google.com/neg: '{"ingress": true}'
  labels:
    app: web-std
spec:
  clusterIP: None
  selector:
    app: web-std
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: web-std
  name: web-std
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web-std
  template:
    metadata:
      labels:
        app: web-std
    spec:
      affinity:
        nodeAffinity:
           requiredDuringSchedulingIgnoredDuringExecution:
             nodeSelectorTerms:
             - matchExpressions:
               - key: cloud.google.com/gke-preemptible
                 operator: DoesNotExist
      containers:
      - image: gcr.io/cloud-solutions-images/pvm-hello-world
        imagePullPolicy: Always
        name: hello-app
        lifecycle:
          preStop:
            httpGet:
              path: /prestop
              port: 8080
        readinessProbe:
          httpGet:
            path: /health
            port: 8080
          failureThreshold: 2
          initialDelaySeconds: 10
          periodSeconds: 10
---
apiVersion: autoscaling/v2beta1
kind: HorizontalPodAutoscaler
metadata:
  name: web-std
spec:
  minReplicas: 1
  maxReplicas: 5
  metrics:
  - external:
      metricName: custom.googleapis.com|envoy_cluster_upstream_rq_active
      metricSelector:
        matchLabels:
          metric.labels.envoy_cluster_name: std
      targetAverageValue: 30
    type: External
  scaleTargetRef:
    apiVersion: apps/v1
    kind: Deployment
    name: web-std
---
apiVersion: v1
kind: Service
metadata:
  name: web-pvm
  annotations:
    cloud.google.com/neg: '{"ingress": true}'
  labels:
    app: web-pvm
spec:
    clusterIP: None
    selector:
      app: web-pvm
    type: ClusterIP
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    app: web-pvm
  name: web-pvm
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web-pvm
  template:
    metadata:
      labels:
        app: web-pvm
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
             - matchExpressions:
               - key: cloud.google.com/gke-preemptible
                 operator: Exists
      containers:
      - image: gcr.io/cloud-solutions-images/pvm-hello-world
        imagePullPolicy: Always
        name: hello-app
        lifecycle:
          preStop:
            httpGet:
              path: /prestop
              port: 8080
        readinessProbe:
          httpGet:
            path: /health
            port: 8080
          failureThreshold: 2
          initialDelaySeconds: 10
          periodSeconds: 2
---
apiVersion: autoscaling/v2beta1
kind: HorizontalPodAutoscaler
metadata:
  name: web-pvm
spec:
  minReplicas: 1
  maxReplicas: 5
  metrics:
  - external:
      metricName: custom.googleapis.com|envoy_cluster_upstream_rq_active
      metricSelector:
        matchLabels:
          metric.labels.envoy_cluster_name: pvm
      targetAverageValue: 30
    type: External
  scaleTargetRef:
    apiVersion: apps/v1
    kind: Deployment
    name: web-pvm
